--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - run: mvn -B clean install -Dmaven.javadoc.skip=true -B -V -Dspring.profiles.active=default
-      - run: bash <(curl -s https://codecov.io/bash) -t 6b147d9a-b341-4008-9e48-a38d50d1cb69
+      - run: bash <(curl -s https://codecov.io/bash)
 
       - store_test_results:
           path: target/surefire-reports
