add exclusion of model entities for test coverage report

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ replay_pid*
 /target/classes/META-INF/maven/com.science.earth.biogeochemistry.freshwaters/PANDORA/pom.xml
 /target/classes/application.properties
 /target/classes/banner.txt
+/.settings/org.eclipse.jdt.ui.prefs
