--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			    <groupId>org.jacoco</groupId>
 			    <artifactId>jacoco-maven-plugin</artifactId>
 			    <version>0.8.10</version>
+			    <configuration>
+			        <excludes>
+			          <exclude>com/science/earth/biogeochemistry/freshwaters/PANDORA/model/**</exclude>
+			        </excludes>
+			    </configuration>
 			    <executions>
 			        <execution>
 			            <goals>
