--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 			    <configuration>
 			        <excludes>
 			          <exclude>com/science/earth/biogeochemistry/freshwaters/PANDORA/model/**</exclude>
+			          <exclude>com/science/earth/biogeochemistry/freshwaters/PANDORA/PandoraApplication.class</exclude>
 			        </excludes>
 			    </configuration>
 			    <executions>
