--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,46 @@ replay_pid*
 /target/classes/application.properties
 /target/classes/banner.txt
 /.settings/org.eclipse.jdt.ui.prefs
+/target/PANDORA-0.0.1-SNAPSHOT.jar.original
+/target/jacoco.exec
+/target/maven-archiver/pom.properties
+/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.PANDORA.services/AbstractBaseEntityServiceImpl.html
+/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.PANDORA.services/AbstractBaseEntityServiceImpl.java.html
+/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.PANDORA.services/AbstractCrudServiceImpl.html
+/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.PANDORA.services/AbstractCrudServiceImpl.java.html
+/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.PANDORA.services/index.html
+/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.PANDORA.services/index.source.html
+/target/site/jacoco/index.html
+/target/site/jacoco/jacoco-resources/branchfc.gif
+/target/site/jacoco/jacoco-resources/branchnc.gif
+/target/site/jacoco/jacoco-resources/branchpc.gif
+/target/site/jacoco/jacoco-resources/bundle.gif
+/target/site/jacoco/jacoco-resources/class.gif
+/target/site/jacoco/jacoco-resources/down.gif
+/target/site/jacoco/jacoco-resources/greenbar.gif
+/target/site/jacoco/jacoco-resources/group.gif
+/target/site/jacoco/jacoco-resources/method.gif
+/target/site/jacoco/jacoco-resources/package.gif
+/target/site/jacoco/jacoco-resources/prettify.css
+/target/site/jacoco/jacoco-resources/prettify.js
+/target/site/jacoco/jacoco-resources/redbar.gif
+/target/site/jacoco/jacoco-resources/report.css
+/target/site/jacoco/jacoco-resources/report.gif
+/target/site/jacoco/jacoco-resources/session.gif
+/target/site/jacoco/jacoco-resources/sort.gif
+/target/site/jacoco/jacoco-resources/sort.js
+/target/site/jacoco/jacoco-resources/source.gif
+/target/site/jacoco/jacoco-resources/up.gif
+/target/site/jacoco/jacoco-sessions.html
+/target/site/jacoco/jacoco.csv
+/target/site/jacoco/jacoco.xml
+/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.PANDORA.PandoraApplicationTests.xml
+/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.PANDORA.services.AbstractBaseEntityServiceImplTest.xml
+/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.PANDORA.services.AbstractCrudServiceImplTest.xml
+/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.PANDORA.PandoraApplicationTests.txt
+/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.PANDORA.services.AbstractBaseEntityServiceImplTest.txt
+/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.PANDORA.services.AbstractCrudServiceImplTest.txt
