add new module pandora-calculation #38

--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,22 @@ mvnw.cmd
 /target/checkstyle-cachefile
 /target/checkstyle-checker.xml
 /target/checkstyle-result.xml
+/pandora-calculation/.classpath
+/pandora-calculation/.project
+/pandora-calculation/.settings/org.eclipse.core.resources.prefs
+/pandora-calculation/.settings/org.eclipse.jdt.apt.core.prefs
+/pandora-calculation/.settings/org.eclipse.jdt.core.prefs
+/pandora-calculation/.settings/org.eclipse.m2e.core.prefs
+/pandora-calculation/target/classes/META-INF/MANIFEST.MF
+/pandora-calculation/target/classes/META-INF/maven/com.science.earth.biogeochemistry.freshwaters/pandora-calculation/pom.properties
+/pandora-calculation/target/classes/META-INF/maven/com.science.earth.biogeochemistry.freshwaters/pandora-calculation/pom.xml
+/pandora-calculation/.settings/org.springframework.ide.eclipse.prefs
+/pandora-calculation/target/checkstyle-cachefile
+/pandora-calculation/target/checkstyle-checker.xml
+/pandora-calculation/target/checkstyle-result.xml
+/pandora-calculation/target/maven-archiver/pom.properties
+/pandora-calculation/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/pandora-calculation/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/pandora-calculation/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+/pandora-calculation/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+/pandora-data/target/surefire-reports/2023-05-24T16-03-50_412-jvmRun1.dump
