--- a/pandora-web/pom.xml
+++ b/pandora-web/pom.xml
@@ -15,7 +15,12 @@
 		    <groupId>com.science.earth.biogeochemistry.freshwaters</groupId>
 		    <artifactId>pandora-data</artifactId>
 		    <version>0.0.1-SNAPSHOT</version>
-		   </dependency>
+		</dependency>
+		<dependency>
+		    <groupId>com.science.earth.biogeochemistry.freshwaters</groupId>
+		    <artifactId>pandora-calculation</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+		</dependency>		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
