#14 add fields add mappers

--- a/pandora-data/pom.xml
+++ b/pandora-data/pom.xml
@@ -66,6 +66,7 @@
 				<configuration>
 					<excludes>
 						<exclude>com/science/earth/biogeochemistry/freshwaters/pandora/model/**</exclude>
+						<exclude>com/science/earth/biogeochemistry/freshwaters/pandora/commands/**</exclude>
 					</excludes>
 				</configuration>
 				<executions>
