--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,74 @@ mvnw.cmd
 /pandora-calculation/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
 /pandora-calculation/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 /pandora-data/target/surefire-reports/2023-05-24T16-03-50_412-jvmRun1.dump
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/FloatInputParamCommandToFloatInputParam.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/FloatInputParamCommandToFloatInputParam.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/FloatInputParamToFloatInputParamCommand.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/FloatInputParamToFloatInputParamCommand.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SpecieInputCommandToSpecieInputEntity.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SpecieInputCommandToSpecieInputEntity.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SpecieInputEntityToSpecieInputCommand.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SpecieInputEntityToSpecieInputCommand.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/index.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/index.source.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/AbstractInputEntityCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/AbstractInputEntityCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/AbstractInputParamCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/AbstractInputParamCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/FloatInputParamCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/FloatInputParamCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/ReactionInputCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/ReactionInputCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/SchemeInputCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/SchemeInputCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/SourceInputCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/SourceInputCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/SpecieInputCrudServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations/SpecieInputCrudServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/AbstractInputEntityServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/AbstractInputEntityServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/ReactionInputServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/ReactionInputServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/ResultEntityServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/ResultEntityServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/SchemeInputServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/SchemeInputServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/SourceInputServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/SourceInputServiceImpl.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/SpecieInputServiceImpl.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations/SpecieInputServiceImpl.java.html
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.FloatInputParamCommandToFloatInputParamTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.FloatInputParamToFloatInputParamCommandTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SpecieInputCommandToSpecieInputEntityTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SpecieInputEntityToSpecieInputCommandTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.AbstractInputEntityCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.AbstractInputParamCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.FloatInputParamCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.ReactionInputCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.SchemeInputCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.SourceInputCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.SpecieInputCrudServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.AbstractInputEntityServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.ReactionInputServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.ResultEntityServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SchemeInputServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SourceInputServiceImplTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SpecieInputServiceImplTest.xml
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.FloatInputParamCommandToFloatInputParamTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.FloatInputParamToFloatInputParamCommandTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SpecieInputCommandToSpecieInputEntityTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SpecieInputEntityToSpecieInputCommandTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.AbstractInputEntityCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.AbstractInputParamCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.FloatInputParamCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.ReactionInputCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.SchemeInputCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.SourceInputCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.crudservices.implementations.SpecieInputCrudServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.AbstractInputEntityServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.ReactionInputServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.ResultEntityServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SchemeInputServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SourceInputServiceImplTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SpecieInputServiceImplTest.txt
+/pandora-web/target/surefire-reports/2023-06-05T21-16-49_911-jvmRun1.dump
