fix build error. closes #64

--- a/.gitignore
+++ b/.gitignore
@@ -440,3 +440,28 @@ mvnw.cmd
 /pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SourceInputServiceImplTest.txt
 /pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.entityservices.implementations.SpecieInputServiceImplTest.txt
 /pandora-web/target/surefire-reports/2023-06-05T21-16-49_911-jvmRun1.dump
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/ReactionInputCommandToReactionInputEntity.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/ReactionInputCommandToReactionInputEntity.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/ReactionInputEntityToReactionInputCommand.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/ReactionInputEntityToReactionInputCommand.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SchemeInputCommandToSchemeInputEntity.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SchemeInputCommandToSchemeInputEntity.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SchemeInputEntityToSchemeInputCommand.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SchemeInputEntityToSchemeInputCommand.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SourceInputCommandToSourceInputEntity.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SourceInputCommandToSourceInputEntity.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SourceInputEntityToSourceInputCommand.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.mappers/SourceInputEntityToSourceInputCommand.java.html
+/pandora-data/target/surefire-reports/2023-06-11T14-36-29_467-jvmRun1.dump
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.ReactionInputCommandToReactionInputEntityTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.ReactionInputEntityToReactionInputCommandTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SchemeInputCommandToSchemeInputEntityTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SchemeInputEntityToSchemeInputCommandTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SourceInputCommandToSourceInputEntityTest.xml
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SourceInputEntityToSourceInputCommandTest.xml
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.ReactionInputCommandToReactionInputEntityTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.ReactionInputEntityToReactionInputCommandTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SchemeInputCommandToSchemeInputEntityTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SchemeInputEntityToSchemeInputCommandTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SourceInputCommandToSourceInputEntityTest.txt
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SourceInputEntityToSourceInputCommandTest.txt
