PANDORA-68 add PandoraIntegrator.java

--- a/pandora-web/pom.xml
+++ b/pandora-web/pom.xml
@@ -79,6 +79,18 @@
 					<reportOutputDirectory>${project.basedir}/../docs/pandora-web</reportOutputDirectory>
 				</configuration>
 	        </plugin>
+	        <plugin>
+	            <groupId>dev.alexengrig</groupId>
+	            <artifactId>codecov-maven-plugin</artifactId>
+	            <version>1.0</version>
+	            <executions>
+	                <execution>
+	                    <goals>
+	                        <goal>upload</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+	        </plugin>  
 		</plugins>
 	</build>
   
