--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+orbs:
+  codecov: codecov/codecov@3.2.2
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -15,10 +18,7 @@ jobs:
     steps:
       - checkout
       - run: mvn -B clean install -Dmaven.javadoc.skip=true -B -V -Dspring.profiles.active=default
-      - run: bash <(curl -s https://codecov.io/bash)
-
-      - store_test_results:
-          path: target/surefire-reports
+      - codecov/upload
 
 workflows:
   build-and-test:
