--- a/pandora-calculation/pom.xml
+++ b/pandora-calculation/pom.xml
@@ -22,6 +22,16 @@
 		    <artifactId>commons-math3</artifactId>
 		    <version>3.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>	
 
 	<build>
@@ -66,6 +76,19 @@
 					<reportOutputDirectory>${project.basedir}/../docs/pandora-calculation</reportOutputDirectory>
 				</configuration>
 	        </plugin>
+	        <plugin>
+	            <groupId>dev.alexengrig</groupId>
+	            <artifactId>codecov-maven-plugin</artifactId>
+	            <version>1.0</version>
+	            <executions>
+	                <execution>
+	                    <id>upload</id>
+	                    <goals>
+	                        <goal>upload</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+	        </plugin>  
 		</plugins>
 	</build>
 </project>
