--- a/pandora-data/pom.xml
+++ b/pandora-data/pom.xml
@@ -10,7 +10,7 @@
 	
 	<artifactId>pandora-data</artifactId>
 	<name>pandora-data</name>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -25,11 +25,6 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -91,7 +86,19 @@
 					<reportOutputDirectory>${project.basedir}/../docs/pandora-data</reportOutputDirectory>
 				</configuration>
 	        </plugin>
+	        <plugin>
+	            <groupId>dev.alexengrig</groupId>
+	            <artifactId>codecov-maven-plugin</artifactId>
+	            <version>1.0</version>
+	            <executions>
+	                <execution>
+	                    <id>upload</id>
+	                    <goals>
+	                        <goal>upload</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+	        </plugin>        
 		</plugins>
 	</build>
 </project>
-
