--- a/.gitignore
+++ b/.gitignore
@@ -465,3 +465,51 @@ mvnw.cmd
 /pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SchemeInputEntityToSchemeInputCommandTest.txt
 /pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SourceInputCommandToSourceInputEntityTest.txt
 /pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.mappers.SourceInputEntityToSourceInputCommandTest.txt
+/pandora-calculation/target/jacoco.exec
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/DissolvedInorganicCarbonDTO.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/DissolvedInorganicCarbonDTO.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/DissolvedOrganicCarbonDTO.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/DissolvedOrganicCarbonDTO.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/SpecieDTO.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/SpecieDTO.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.carbon.DTO/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/PandoraDifferentialEquations.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/PandoraDifferentialEquations.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/PandoraIntegrator.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/PandoraIntegrator.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.implementations/GeneralReactions.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.implementations/GeneralReactions.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.implementations/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.implementations/index.source.html
+/pandora-calculation/target/site/jacoco/index.html
+/pandora-calculation/target/site/jacoco/jacoco-resources/branchfc.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/branchnc.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/branchpc.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/bundle.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/class.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/down.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/greenbar.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/group.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/method.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/package.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/prettify.css
+/pandora-calculation/target/site/jacoco/jacoco-resources/prettify.js
+/pandora-calculation/target/site/jacoco/jacoco-resources/redbar.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/report.css
+/pandora-calculation/target/site/jacoco/jacoco-resources/report.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/session.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/sort.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/sort.js
+/pandora-calculation/target/site/jacoco/jacoco-resources/source.gif
+/pandora-calculation/target/site/jacoco/jacoco-resources/up.gif
+/pandora-calculation/target/site/jacoco/jacoco-sessions.html
+/pandora-calculation/target/site/jacoco/jacoco.csv
+/pandora-calculation/target/site/jacoco/jacoco.xml
+/pandora-calculation/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations.PandoraDifferentialEquationsTest.xml
+/pandora-calculation/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations.PandoraDifferentialEquationsTest.txt
+/pandora-calculation/codecov.sh
+/pandora-data/codecov.sh
+/pandora-web/codecov.sh
