PANDORA-71 add service beans

--- a/.gitignore
+++ b/.gitignore
@@ -513,3 +513,40 @@ mvnw.cmd
 /pandora-calculation/codecov.sh
 /pandora-data/codecov.sh
 /pandora-web/codecov.sh
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations/PandoraDifferentialEquations$PandoraDifferentialEquationsBuilder.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/CellTimestepServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/CellTimestepServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/FirstOrderDifferentialEquationsServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/FirstOrderDifferentialEquationsServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/FirstOrderIntegratorServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/FirstOrderIntegratorServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/PandoraIntegratorServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/PandoraIntegratorServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/RiverTimestepServiceImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/RiverTimestepServiceImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general.services.implementations/index.source.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/PandoraTimestepImpl$PandoraTimestepImplBuilder.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/PandoraTimestepImpl.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/PandoraTimestepImpl.java.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/index.html
+/pandora-calculation/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.general/index.source.html
+/pandora-calculation/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations.PandoraIntegratorServiceImplTest.xml
+/pandora-calculation/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.general.calculations.PandoraIntegratorServiceImplTest.txt
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/AbstractBaseMapCrudService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/AbstractBaseMapCrudService.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/AbstractMapCrudService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/AbstractMapCrudService.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/CellMapCrudService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/CellMapCrudService.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/CellTimestepMapCrudService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/CellTimestepMapCrudService.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/RiverMapCrudService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/RiverMapCrudService.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/RiverTimestepMapCrudService.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/RiverTimestepMapCrudService.java.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/index.html
+/pandora-data/target/site/jacoco/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.implementations/index.source.html
+/pandora-data/target/surefire-reports/TEST-com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.AbstractBaseMapCrudServiceTest.xml
+/pandora-data/target/surefire-reports/com.science.earth.biogeochemistry.freshwaters.pandora.services.mapcrudservices.AbstractBaseMapCrudServiceTest.txt
+/pandora-web/target/surefire-reports/2023-07-12T16-10-15_915-jvmRun1.dump
